# gaia-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PUBSUB_DETAILED.md  README.md  app.json  components.json  debug_semantic_search.py  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  first-stage.Dockerfile  mise.toml  next.config.mjs  next.config.ts  nx.json  output.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config-fallback.json  release-please-config.json  requirements.txt  tailwind.config.js  test.html  test.txt  tsconfig.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.voice-agent  README.md  docker-compose.prod.yml  mcp.txt  mise.toml  pyproject.toml
backend/app/: arq_worker.py  main.py  voice_agent.py  worker.py
backend/app/agents/core/: agent.py  graph_manager.py  messages.py
backend/app/agents/evals/: evaluate.py
backend/app/agents/llm/: client.py
backend/app/agents/prompts/: agent_prompts.py  comms_prompts.py  subagent_prompts.py  workflow_prompts.py
backend/app/agents/templates/: agent_template.py  mail_templates.py
backend/app/agents/tools/: calendar_tool.py  executor_tool.py  memory_tools.py
backend/app/api/v1/: routes.py
backend/app/config/: cloudinary.py  loggers.py  oauth_config.py  rate_limits.py  secrets.py  settings.py  token_repository.py
backend/app/constants/: general.py
backend/app/core/: app_factory.py  lazy_loader.py  lifespan.py  middleware.py  provider_registration.py  websocket_manager.py
backend/app/db/: chromadb.py  chromadb_store.py  postgresql.py  rabbitmq.py  redis.py  utils.py
backend/app/db/chromadb/: chroma_tools_store.py
backend/app/db/mongodb/: collections.py  indexes.py  mongodb.py
backend/app/decorators/: __init__.py  caching.py  integration.py  logging.py  profiling.py  rate_limiting.py
backend/app/helpers/: agent_helpers.py  lifespan_helpers.py  message_helpers.py
backend/app/langchain/core/: agent.py  agent_helpers.py  agent_utils.py  graph_manager.py  message_helpers.py  messages.py  state.py
backend/app/langchain/llm/: chatbot.py  client.py  token_counter.py
backend/app/langchain/prompts/: agent_prompts.py  convo_prompts.py  google_docs_prompts.py  mail_prompts.py  search_prompts.py  subagent_prompts.py  trigger_prompts.py  workflow_prompts.py
backend/app/langchain/templates/: calendar_template.py  mail_templates.py  search_templates.py  workflow_template.py
backend/app/langchain/tools/: calendar_tool.py  code_exec_tool.py  document_tool.py  file_tools.py  flowchart_tool.py  goal_tool.py  google_docs_tool.py  image_tool.py  mail_tool.py  memory_tools.py  notification_tool.py  reminder_tool.py  search_tool.py  support_tool.py  todo_tool.py  weather_tool.py  webpage_tool.py  workflow_tool.py
backend/app/memory/: client.py
backend/app/middleware/: auth_middleware.py  langchain_rate_limiter.py  logger.py  profiler.py  tiered_rate_limiter.py
backend/app/models/: calendar_models.py  chat_models.py  google_docs_models.py  mail_models.py  memory_models.py  message_models.py  models_models.py  oauth_models.py  payment_models.py  reminder_models.py  search_models.py  support_models.py  todo_models.py  tools_models.py  usage_models.py  user_models.py  webhook_models.py  workflow_models.py
backend/app/models/notification/: notification_models.py
backend/app/override/langgraph_bigtool/: create_agent.py
backend/app/services/: blog_service.py  calendar_service.py  chat_service.py  composio_service.py  contact_service.py  conversation_service.py  email_importance_service.py  email_workflow_filter_service.py  file_service.py  goals_service.py  google_docs_service.py  image_service.py  langchain_composio_service.py  mail_service.py  mail_webhook_service.py  memory_service.py  model_service.py  notes_service.py  notification_service.py  oauth_service.py  onboarding_service.py  payment_service.py  payment_webhook_service.py  post_onboarding_service.py  reminder_service.py  search_service.py  support_service.py  sync_service.py  team_service.py  todo_service.py  token_service.py  tools_service.py  usage_service.py  user_service.py  waitlist_service.py  webhook_service.py  workflow_conversation_service.py
backend/app/services/composio/: composio_service.py
backend/app/services/mail/: email_importance_service.py  mail_service.py
backend/app/services/payments/: __init__.py  client.py  core.py  payment_service.py  plans.py  subscriptions.py  verification.py  webhooks.py
backend/app/services/workflow/: __init__.py  generation_service.py  queue_service.py  scheduler.py  scheduler_service.py  service.py
backend/app/tasks/: mail_tasks.py  reminder_tasks.py  subscription_cleanup.py
backend/app/templates/: subscribed.html
backend/app/utils/: agent_utils.py  auth_utils.py  calendar_cache.py  calendar_operations.py  calendar_utils.py  chart_utils.py  chat_utils.py  common_utils.py  country_utils.py  cron_utils.py  document_utils.py  email_utils.py  embedding_utils.py  exceptions.py  file_utils.py  general_utils.py  image_utils.py  integration_checker.py  integration_decorator.py  internet_utils.py  logging_utils.py  memory_utils.py  nltk_utils.py  oauth_utils.py  payments_utils.py  pubsub_auth.py  redis_utils.py  search_utils.py  seeding_utils.py  timezone.py  todo_vector_utils.py  tool_ui_builders.py  user_preferences_utils.py  watch_mail.py  weather_utils.py  websocket_consumer.py  worker_detection.py
backend/app/worker_node/: process_email.py  process_workflow.py
backend/app/workers/: voice_agent.py
backend/scripts/: cleanup_old_plans.py  dodo_setup.py  fix_subscription_data.py  payment_setup.py  razorpay_setup.py  run_dodo_setup.sh  seed_models.py
backend/tests/: test_inactive_users.py
backend/voice_agent/: Dockerfile  pyproject.toml
backend/voice_agent/src/: voice_agent.py  voice_secrets.py  voice_settings.py
(+2274 files in other folders)
