[project]
name = "gaia"
version = "0.1.0"
description = "Backend of GAIA - The personal AI assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiogoogle>=5.14.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.7.0",
    "assemblyai>=0.37.0",
    "authlib>=1.4.1",
    "beautifulsoup4==4.12.3",
    "blis==1.1.0",
    "breadability==0.1.20",
    "bs4==0.0.2",
    "cachetools==5.5.1",
    "catalogue==2.0.10",
    "celery>=5.4.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "chroma>=0.2.0",
    "click==8.1.8",
    "cloudinary==1.41.0",
    "cloudpathlib==0.20.0",
    "colorama==0.4.6",
    "confection==0.1.5",
    "cymem==2.0.10",
    "deepgram-sdk>=3.10.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docopt==0.6.2",
    "docx2txt>=0.9",
    "email-validator==2.2.0",
    "fastapi[standard]==0.115.6",
    "ffmpeg-python==0.2.0",
    "filelock==3.16.1",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "google-api-core==2.24.0",
    "google-api-python-client>=2.162.0",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.66.0",
    "groq==0.15.0",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.1.0",
    "html2text>=2024.2.26",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "itsdangerous>=2.2.0",
    "jieba==0.42.1",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "llvmlite==0.44.0",
    "lxml==5.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "motor==3.6.0",
    "mpmath==1.3.0",
    "murmurhash==1.0.11",
    "networkx==3.4.2",
    "nltk",
    "numba==0.61.0",
    "numpy==2.1.3",
    "packaging==24.2",
    "passlib==1.7.4",
    "pendulum>=3.0.0",
    "pillow==11.0.0",
    "pip-chill>=1.0.3",
    "pip-licenses>=5.0.0",
    "playwright>=1.51.0",
    "preshed==3.0.9",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pydantic-settings>=2.8.1",
    "pydub==0.25.1",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "pymongo==4.9.2",
    "pymupdf==1.25.1",
    "pypdf2==3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv==1.0.1",
    "python-jose>=3.3.0",
    "python-multipart==0.0.20",
    "pytz>=2025.1",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rsa==4.9",
    "safetensors==0.4.5",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "sentence-transformers==3.4.0",
    "sentry-sdk==2.20.0",
    "setproctitle==1.3.4",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "spacy==3.8.3",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.0",
    "srt==3.5.3",
    "starlette==0.41.3",
    "sumy==0.11.0",
    "sympy==1.13.1",
    "thinc==8.3.3",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tldextract>=5.1.3",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.47.1",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "vosk==0.3.45",
    "wasabi==1.1.3",
    "watchdog>=6.0.0",
    "weasel==0.4.1",
    "websockets==14.1",
    "win32-setctime==1.2.0",
    "wrapt==1.17.0",
    "xxhash==3.5.0",
]
