[project]
name = "gaia"
version = "0.1.0"
description = "Backend of GAIA - The personal AI assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "assemblyai>=0.37.0",
    "beautifulsoup4==4.12.3",
    "browser-use>=0.1.40",
    "bs4==0.0.2",
    "celery>=5.4.0",
    "chromadb>=0.6.3",
    "cloudinary==1.41.0",
    "deepgram-sdk>=3.10.0",
    "docx2txt>=0.9",
    "fastapi[standard]==0.115.6",
    "google-api-core==2.24.0",
    "google-api-python-client>=2.162.0",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.66.0",
    "groq==0.15.0",
    "html2text>=2024.2.26",
    "httpx==0.28.1",
    "huggingface-hub==0.27.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "itsdangerous>=2.2.0",
    "jieba==0.42.1",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "laminar[all]>=2022.5a1",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-google-genai>=2.1.2",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "llvmlite==0.44.0",
    "lmnr[all]>=0.4.54",
    "lxml==5.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "motor==3.6.0",
    "nltk",
    "openai>=1.69.0",
    "pendulum>=3.0.0",
    "pillow==11.0.0",
    "playwright>=1.51.0",
    "pre-commit>=4.2.0",
    "protobuf==5.29.3",
    "pydantic==2.10.4",
    "pydantic-settings>=2.8.1",
    "pymongo==4.9.2",
    "pymupdf>=1.25.5",
    "pypdf2==3.0.1",
    "pytesseract>=0.3.13",
    "redis==5.2.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "sentence-transformers==3.4.0",
    "starlette==0.41.3",
    "sumy==0.11.0",
    "tldextract>=5.1.3",
    "transformers==4.48.0",
    "typing-extensions==4.12.2",
    "urlextract>=1.9.0",
]
