[project]
name = "gaia"
version = "0.9.1"
description = "Backend of GAIA - The personal AI assistant"
readme = "../README.md"
requires-python = ">=3.11"

# ==================================================
# Shared runtime deps (used by backend + voice)
# ==================================================
dependencies = [
  "typing-extensions==4.12.2",
  "pydantic==2.10.4",
  "pydantic-settings>=2.8.1",
  "loguru>=0.7.3",
  "stackprinter>=0.2.12",
  "beartype>=0.21.0",

  "orjson>=3.11.3",
  "ujson>=5.11.0",
  "httpx==0.28.1",

  "pendulum>=3.0.0",
  "uuid7>=0.1.0",
  "croniter>=3.0.0",

  "infisicalsdk>=1.0.7",
]

# ==================================================
# Dependency Groups (PEP-735 / uv compatible)
# ==================================================

[dependency-groups]

dev = [
  "mypy>=1.16.1",
  "ruff>=0.12.2",
  "pre-commit>=4.2.0",
  "cfgv>=3.4.0",

  "types-pytz>=2025.2.0.20250516",
  "types-croniter>=6.0.0.20250626",
  "types-redis",
  "types-requests>=2.32.4.20250611",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-python-dateutil>=2.9.0.20250708",
  "lxml-stubs>=0.5.1",
  "pandas-stubs>=2.3.0.250703",
  "types-deprecated>=1.2.15.20250304",
  "types-pygments>=2.19.0.20250516",
  "types-cachetools>=6.0.0.20250525",
  "types-cffi>=1.17.0.20250523",
  "types-colorama>=0.4.15.20240311",
  "types-decorator>=5.2.0.20250324",
  "types-defusedxml>=0.7.0.20250708",
  "types-greenlet>=3.2.0.20250417",
  "types-jsonschema>=4.24.0.20250708",
  "types-pexpect>=4.9.0.20250516",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7.0.0.20250601",
  "types-pyopenssl>=24.1.0.20240722",
  "types-pyasn1>=0.6.0.20250516",
  "types-regex>=2024.11.6.20250403",
  "types-simplejson>=3.20.0.20250326",
  "types-tensorflow>=2.18.0.20250516",
  "types-tqdm>=4.67.0.20250516",
  "types-ujson>=5.10.0.20250326",
]

# -------------------------
# Backend API + AI + DB
# -------------------------
backend = [
  "fastapi[standard]==0.115.6",
  "uvicorn>=0.34.1",
  "starlette==0.41.3",
  "slowapi>=0.1.9",
  "fastapi-cache2[redis]>=0.1.8",
  "aiolimiter>=1.2.1",
  "rich==14.0.0",

  # Auth
  "PyJWT>=2.10.0",
  "authlib>=1.6.1",
  "workos>=5.24.0",

  # Databases
  "motor==3.6.0",
  "pymongo==4.9.2",
  "redis==5.2.1",
  "psycopg2-binary>=2.9.10",
  "psycopg[binary,pool]>=3.2.10",
  "asyncpg>=0.30.0",
  "chromadb>=0.6.3",

  # LangChain / Graph
  "langchain>=0.3.27",
  "langchain-core>=0.3.74",
  "langchain-openai>=0.3.1",
  "langchain-groq>=0.3.2",
  "langchain-chroma>=0.2.2",
  "langchain-google-genai>=2.1.2",
  "langgraph>=0.6.5",
  "langgraph-checkpoint-postgres>=2.0.21",
  "langgraph-bigtool>=0.0.2",

  # Models
  "openai>=1.69.0",
  "groq==0.15.0",
  "lmnr[all]>=0.4.54",
  "mem0ai>=1.0.1",

  # Docs / tools
  "pypdf2==3.0.1",
  "pymupdf>=1.25.5",
  "docx2txt>=0.9",
  "pypandoc>=1.15",
  "markdown2>=2.5.3",
  "pytesseract>=0.3.13",
  "pandas>=2.3.0",

  # Web
  "beautifulsoup4==4.12.3",
  "bs4==0.0.2",
  "lxml==6.0.0",
  "html2text>=2024.2.26",
  "tldextract>=5.1.3",
  "browser-use>=0.1.40",
  "pyppeteer>=0.0.25",
  "firecrawl-py>=4.3.6",
  "firecrawl>=4.6.0",
  "tavily-python>=0.7.12",

  # Workers
  "arq>=0.26.0",
  "aio-pika>=9.5.5",
]

voice_agent = [
  # LiveKit stack
  "livekit>=1.0.12",
  "livekit-agents[turn-detector,silero,deepgram]~=1.2",
  "livekit-plugins-noise-cancellation~=0.2",
  "livekit-plugins-elevenlabs~=1.2",

  # Speech / audio
  "deepgram-sdk>=3.10.0",
  "assemblyai>=0.37.0",

  # Infra required by load_settings()
  "redis==5.2.1",
  "fastapi-cache2[redis]>=0.1.8",
  "slowapi>=0.1.9",
  "aiolimiter>=1.2.1",

  # Utils
  "hf_transfer",
]


heavy = [
  "langchain-community",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

# ==================================================
# URLs
# ==================================================
[project.urls]
Homepage = "https://heygaia.io"
Documentation = "https://docs.heygaia.io"
Repository = "https://github.com/theexperiencecompany/gaia"
Issues = "https://github.com/theexperiencecompany/gaia/issues"
