[project]
name = "gaia"
version = "0.9.1"
description = "Backend of GAIA - The personal AI assistant"
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
  "urllib3>=2.6.0",
  "langgraph-checkpoint-postgres>=2.0.21",
  "beautifulsoup4==4.12.3",
  "bs4==0.0.2",
  "cloudinary==1.41.0",
  "fastapi[standard]==0.115.6",
  "ftfy>=6.3.0",
  "google-api-core==2.24.0",
  "google-api-python-client>=2.162.0",
  "google-auth==2.38.0",
  "googleapis-common-protos==1.66.0",
  "html2text>=2024.2.26",
  "httpx==0.28.1",
  "infisicalsdk>=1.0.7",
  "jinja2==3.1.5",
  "langchain-chroma>=0.2.2",
  "langchain-google-genai>=2.1.2",
  "motor==3.6.0",
  "pendulum>=3.0.0",
  "protobuf==5.29.5",
  "pydantic==2.10.4",
  "pydantic-settings>=2.8.1",
  "pymongo==4.9.2",
  "redis==5.2.1",
  "starlette==0.41.3",
  "typing-extensions==4.12.2",
  "langchain-openai>=0.3.1",
  "llama-cloud-services>=0.6.15",
  "uuid7>=0.1.0",
  "chromadb>=0.6.3",
  "slowapi>=0.1.9",
  "langgraph-bigtool>=0.0.2",
  "aio-pika>=9.5.5",
  "arq>=0.26.0",
  "croniter>=3.0.0",
  "e2b-code-interpreter>=1.2.0",
  "pypandoc>=1.15",
  "markdown2>=2.5.3",
  "resend>=2.10.0",
  "tomli>=2.2.1",
  "workos>=5.24.0",
  "authlib>=1.6.1",
  "composio>=0.8.19",
  "dodopayments>=1.49.0",
  "standardwebhooks>=1.0.0",
  "langchain-core>=0.3.74",
  "langgraph>=0.6.5",
  "pyinstrument>=5.1.1",
  "stackprinter>=0.2.12",
  "loguru>=0.7.3",
  "uvloop>=0.21.0; sys_platform != 'win32'",
  "mem0ai>=1.0.1",
  "firecrawl-py>=4.3.6",
  "tavily-python>=0.7.12",
  "firecrawl>=4.5.0",
  "posthog>=5.4.0",
  "sentry-sdk[langgraph]>=2.44.0",
  "crawl4ai>=0.7.7",
  "langchain>=0.3.27",
  "ujson>=5.11.0",
  "asyncpg>=0.31.0",
  "urllib3==2.6.0",
  "opik>=1.9.47",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "ruff>=0.4.4",
  "types-pytz>=2025.2.0.20250516",
  "types-croniter>=6.0.0.20250626",
  "types-redis",
  "types-requests>=2.32.4.20250611",
  "types-beautifulsoup4>=4.12.0.20250516",
  "lxml-stubs>=0.5.1",
  "pandas-stubs>=2.3.0.250703",
  "types-deprecated>=1.2.15.20250304",
  "types-pygments>=2.19.0.20250516",
  "types-cachetools>=6.0.0.20250525",
  "types-cffi>=1.17.0.20250523",
  "types-colorama>=0.4.15.20240311",
  "types-decorator>=5.2.0.20250324",
  "types-defusedxml>=0.7.0.20250708",
  "types-greenlet>=3.2.0.20250417",
  "types-jsonschema>=4.24.0.20250708",
  "types-pexpect>=4.9.0.20250516",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7.0.0.20250601",
  "types-pyopenssl>=24.1.0.20240722",
  "types-pyasn1>=0.6.0.20250516",
  "types-python-dateutil>=2.9.0.20250708",
  "types-regex>=2024.11.6.20250403",
  "types-simplejson>=3.20.0.20250326",
  "types-tensorflow>=2.18.0.20250516",
  "types-tqdm>=4.67.0.20250516",
  "types-ujson>=5.10.0.20250326",
]

heavy = ["langchain", "langchain-community"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[project.urls]
Homepage = "https://heygaia.io"
Documentation = "https://docs.heygaia.io"
Repository = "https://github.com/theexperiencecompany/gaia"
Issues = "https://github.com/theexperiencecompany/gaia/issues"
